--- a/professional-service.properties
+++ b/professional-service.properties
@@ -1,3 +1,18 @@
-eureka.client.serviceUrl.defaultZone= http://eureka-container:8761/eureka/
+spring.rabbitmq.host=rabbitMQ
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+server.port=8022
+neo4j.exchange.name=neo4j.exchange
+neo4j.queue.name=neo4j.queue
+neo4j.routing.key=neo4j.routingkey
+
+professional.exchange.name=professional-exchange
+professional.queue.name=professional-queue
+professional.routing.key=professional-routing-key
+
+spring.main.allow-bean-definition-overriding=true
+
+eureka.client.serviceUrl.defaultZone=http://eureka-server:8085/eureka/
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
