--- a/profile-service.properties
+++ b/profile-service.properties
@@ -1,2 +1,15 @@
 spring.data.mongodb.uri=mongodb://mongo:27017/user_db
 spring.datasource.driver-class-name=mongodb.jdbc.MongoDriver
+
+ 
+spring.rabbitmq.host=rabbitMQ
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+profile.exchange.name=profile-exchange
+profile.queue.name=profile-queue
+profile.routing.key=profile-routing-key
+
+spring.main.allow-bean-definition-overriding=true
+
