--- a/recommendation-service.properties
+++ b/recommendation-service.properties
@@ -5,3 +5,10 @@ spring.data.neo4j.password=gamos
 # Message Queue specific configs for profile service
 profile.exchange.name=profile-exchange
 profile.routing.key=profile-routing-key
+
+
+#AMQP RabbitMQ configuration
+spring.rabbitmq.host=rabbitMQ
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
