--- a/profile-service.properties
+++ b/profile-service.properties
@@ -11,5 +11,10 @@ profile.exchange.name=profile-exchange
 profile.queue.name=profile-queue
 profile.routing.key=profile-routing-key
 
+
+recommendation.exchange.name=recommendation-exchange
+recommendation.queue.name=recommendation-queue
+recommendation.routing.key=recommendation-key
+
 spring.main.allow-bean-definition-overriding=true
 
