--- a/recommendation-service.properties
+++ b/recommendation-service.properties
@@ -6,6 +6,11 @@ spring.data.neo4j.password=gamos
 profile.exchange.name=profile-exchange
 profile.routing.key=profile-routing-key
 
+# Message Queue specific configs for recommendation service
+recommendation.exchange.name=recommendation-exchange
+recommendation.queue.name=recommendation-queue
+recommendation.routing.key=recommendation-key
+
 
 #AMQP RabbitMQ configuration
 spring.rabbitmq.host=rabbitMQ
