--- a/recommendation-service.properties
+++ b/recommendation-service.properties
@@ -5,6 +5,7 @@ spring.data.neo4j.password=gamos
 # Message Queue specific configs for profile service
 profile.exchange.name=profile-exchange
 profile.routing.key=profile-routing-key
+profile.queue.name=profile-queue
 
 # Message Queue specific configs for recommendation service
 recommendation.exchange.name=recommendation-exchange
