--- a/horoscope-service.properties
+++ b/horoscope-service.properties
@@ -8,7 +8,7 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 neo4j.exchange.name=neo4j.exchange
-neo4j.queue.name=neo4j.queue
+neo4j.queue.name=neo4j.horoscope.queue
 neo4j.routing.key=neo4j.routingkey
 
 horoscope.exchange.name=horoscope-exchange
