--- a/personal-service.properties
+++ b/personal-service.properties
@@ -3,7 +3,7 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 neo4j.exchange.name=neo4j.exchange
-neo4j.queue.name=neo4j.queue
+neo4j.queue.name=neo4j.personal.queue
 neo4j.routing.key=neo4j.routingkey
 
 personal.exchange.name=personal-exchange
