--- a/professional-service.properties
+++ b/professional-service.properties
@@ -4,7 +4,7 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 server.port=8022
 neo4j.exchange.name=neo4j.exchange
-neo4j.queue.name=neo4j.queue
+neo4j.queue.name=neo4j.professional.queue
 neo4j.routing.key=neo4j.routingkey
 
 professional.exchange.name=professional-exchange
