--- a/recommendation-service.properties
+++ b/recommendation-service.properties
@@ -18,3 +18,10 @@ spring.rabbitmq.host=rabbitMQ
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+#neo4j indexing queue
+neo4j.exchange.name=neo4j.exchange
+neo4j.horoscope.queue.name=neo4j.horoscope.queue
+neo4j.professional.queue.name=neo4j.professional.queue
+neo4j.personal.queue.name=neo4j.personal.queue
+neo4j.routing.key=neo4j.routingkey
