--- a/personal-service.properties
+++ b/personal-service.properties
@@ -15,3 +15,7 @@ spring.main.allow-bean-definition-overriding=true
 eureka.client.serviceUrl.defaultZone=http://eureka-server:8085/eureka/
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
+
+recommendation.exchange.name=recommendation-exchange
+recommendation.queue.name=recommendation-queue
+recommendation.routing.key=recommendation-key
