--- a/recommendation-service.properties
+++ b/recommendation-service.properties
@@ -25,3 +25,6 @@ neo4j.horoscope.queue.name=neo4j.horoscope.queue
 neo4j.professional.queue.name=neo4j.professional.queue
 neo4j.personal.queue.name=neo4j.personal.queue
 neo4j.routing.key=neo4j.routingkey
+
+recommendation.queue1.name=recommendation-queue1
+recommendation.routing1.key=recommendation-key1
