--- a/profile-service.properties
+++ b/profile-service.properties
@@ -13,8 +13,8 @@ profile.routing.key=profile-routing-key
 
 
 recommendation.exchange.name=recommendation-exchange
-recommendation.queue.name=recommendation-queue
-recommendation.routing.key=recommendation-key
+recommendation.queue1.name=recommendation-queue1
+recommendation.routing1.key=recommendation-key1
 
 spring.main.allow-bean-definition-overriding=true
 
