--- a/professional-service.properties
+++ b/professional-service.properties
@@ -3,9 +3,9 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 server.port=8022
-neo4j.exchange.name=neo4j.exchange
-neo4j.queue.name=neo4j.professional.queue
-neo4j.routing.key=neo4j.routingkey
+recommendation.exchange.name=recommendation.exchange
+recommendation.queue.name=recommendation.queue
+recommendation.routing.key=recommendation.routingkey
 
 professional.exchange.name=professional-exchange
 professional.queue.name=professional-queue
