--- a/horoscope-service.properties
+++ b/horoscope-service.properties
@@ -7,9 +7,9 @@ spring.rabbitmq.host=rabbitMQ
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-recommendation.exchange.name=recommendation.exchange
-recommendation.queue.name=recommendation.queue
-recommendation.routing.key=recommendation.routingkey
+recommendation.exchange.name=recommendation-exchange
+recommendation.queue.name=recommendation-queue
+recommendation.routing.key=recommendation-routingkey
 
 horoscope.exchange.name=horoscope-exchange
 horoscope.queue.name=horoscope-queue
