--- a/horoscope-service.properties
+++ b/horoscope-service.properties
@@ -9,7 +9,7 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 recommendation.exchange.name=recommendation-exchange
 recommendation.queue.name=recommendation-queue
-recommendation.routing.key=recommendation-routingkey
+recommendation.routing.key=recommendation-key
 
 horoscope.exchange.name=horoscope-exchange
 horoscope.queue.name=horoscope-queue
