--- a/upstream-service.properties
+++ b/upstream-service.properties
@@ -19,6 +19,17 @@ horoscope.routing.key=horoscope-routing-key
 profile.exchange.name=profile-exchange
 profile.routing.key=profile-routing-key
 
+# Message Queue specific configs for influx
+influx.exchange.name=telegraf
+influx.routing.key=#
+
+# Amazon Properties
+amazonProperties.endpointUrl=https://s3.ap-south-1.amazonaws.com
+amazonProperties.accessKey=AKIAUUD57ECHHRF4FADJ
+amazonProperties.secretKey=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
+amazonProperties.bucketName=gamos.details
+
+
 #AMQP RabbitMQ configuration
 spring.rabbitmq.host=rabbitMQ
 spring.rabbitmq.port=5672
